Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96178

[wasm] Cursor shape does not work

    XMLWordPrintable

Details

    • WebAssembly
    • 97be0cca174a3b92c24062c557bf4df34db23f7b (qt/qtbase/dev) e25c2905e32d57a2b7f2148414ae9bfd5366aee4 (qt/qtbase/6.2) 841af88d6ff6cd4e3db03137d5fd6cd13ee06789 (qt/tqtc-qtbase/5.15)

    Description

      If the MouseArea has a cursorShape property set the cursor shape should change accordingly when hovering over the MouseArea.

      To reproduce please run the attached example project with wasm and mouse hover the red rectangle.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes