wasm: fix changing cursor shape

The previous implementation would occasionally result
in a crash when a window was closed.

Apparently 'auto' cursor does not work so well,
so we now use 'default' name.

Fixes: QTBUG-96178
Change-Id: I0179d20dbdc01f0e3021d746324e1e39c678a298
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 97be0cca174a3b92c24062c557bf4df34db23f7b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>